--- a/server/views/gamepad.ejs
+++ b/server/views/gamepad.ejs
@@ -73,7 +73,7 @@ function sendValues(override){
   label.y = -7;
   
   var dragger = new createjs.Container();
-  dragger.x = dragger.y = 150;
+  dragger.x = dragger.y = cw/2;
   dragger.addChild(circle, label);
   stage.addChild(dragger);
   
