--- a/server/views/gamepad.ejs
+++ b/server/views/gamepad.ejs
@@ -115,7 +115,7 @@ function sendValues(override){
         console.log("CENTER");
         clearInterval(returnInterval);
         evt.currentTarget.x = windowWidth/2;
-        evt.currentTarget.y = windowHeight;
+        evt.currentTarget.y = windowHeight/2;
         
         xToSend = 0;
         yToSend = 0;
