--- a/server/views/gamepad.ejs
+++ b/server/views/gamepad.ejs
@@ -15,9 +15,9 @@
 }
 
 html, body {
-  width:  90%;
-  height: 90%;
-  margin: auto;
+  width:  100%;
+  height: 100%;
+  margin: 0px;
 }
 
 </style>
