--- a/server/views/gamepad.ejs
+++ b/server/views/gamepad.ejs
@@ -178,8 +178,8 @@ var init = function init() {
 		}, 10);
 	});
 
-	stage.update();
-	stage.update();
+	stage1.update();
+	stage2.update();
 };
 init();
 
