--- a/server/views/gamepad.ejs
+++ b/server/views/gamepad.ejs
@@ -82,10 +82,9 @@ var init = function init() {
 	ctx.canvas.width  = windowWidth;
 	ctx.canvas.height = windowHeight;
 
-	stage = new createjs.Stage("canvas1");
+	stage = new createjs.Stage("canvas");
 
 	createjs.Touch.enable(stage1);
-
 
 	stage.mouseMoveOutside = true; 
 
