--- a/server/views/gamepad.ejs
+++ b/server/views/gamepad.ejs
@@ -94,7 +94,7 @@ var init = function init() {
 	label1.textAlign = "center";
 	label1.y = -7;
 	var dragger1 = new createjs.Container();
-	dragger1.x = windowWidth/2
+	dragger1.x = windowWidth/4
 	dragger1.y = windowHeight/2;
 	dragger1.addChild(circle1, label1);
 	stage.addChild(dragger1);
@@ -105,7 +105,7 @@ var init = function init() {
 	label2.textAlign = "center";
 	label2.y = -7;
 	var dragger2 = new createjs.Container();
-	dragger2.x = windowWidth/2
+	dragger2.x = 3*windowWidth/4
 	dragger2.y = windowHeight/2;
 	dragger2.addChild(circle2, label2);
 	stage.addChild(dragger2);
