--- a/server/views/gamepad.ejs
+++ b/server/views/gamepad.ejs
@@ -137,7 +137,7 @@ var init = function init() {
 			x1ToSend = evt.currentTarget.x - windowWidth/4;
 			y1ToSend = windowHeight/2 - evt.currentTarget.y;        
 			sendValues(false);
-			if (Math.abs(x1ToSend) < 1) {
+			if (Math.abs(x1ToSend) < 1 && Math.abs(y2ToSend) < 1) {
 				console.log("CENTER");
 				clearInterval(returnInterval1);
 				evt.currentTarget.x = windowWidth/4;
@@ -158,7 +158,7 @@ var init = function init() {
 			y2ToSend = windowHeight/2 - evt.currentTarget.y;        
 			sendValues(false);
 
-			if (Math.abs(x2ToSend) < 1) {
+			if (Math.abs(x2ToSend) < 1 && Math.abs(y2ToSend) < 1) {
 				console.log("CENTER");
 				clearInterval(returnInterval2);
 				evt.currentTarget.x = 3*windowWidth/4;
