--- a/server/views/gamepad.ejs
+++ b/server/views/gamepad.ejs
@@ -62,11 +62,11 @@ function sendValues(override){
 	if (Date.now() - movementUpdateTime > 50 || override) {
 		movementUpdateTime = Date.now();
 		
-		pos.x1 = Math.round(x1ToSend);
-		pos.y1 = Math.round(y1ToSend);
+		pos.x1 = Math.round(Math.round(x1ToSend) / (windowWidth/4));
+		pos.y1 = Math.round(Math.round(y1ToSend) / (windowHeight/2));
 		
-		pos.x2 = Math.round(x2ToSend);
-		pos.y2 = Math.round(y2ToSend);
+		pos.x2 = Math.round(Math.round(x2ToSend) / (windowWidth/4));
+		pos.y2 = Math.round(Math.round(y2ToSend) / (windowHeight/2));
 
 		console.log("Sending values ", pos);
 
