--- a/server/views/gamepad.ejs
+++ b/server/views/gamepad.ejs
@@ -115,7 +115,7 @@ var init = function init() {
 	stage.addChild(dragger1);
 	
 	var circle2 = new createjs.Shape();
-	circle2.graphics.beginFill("red").drawCircle(0, 0, 50);
+	circle2.graphics.beginFill("blue").drawCircle(0, 0, 50);
 	var label2 = new createjs.Text("Drag", "bold 14px Arial", "#FFFFFF");
 	label2.textAlign = "center";
 	label2.y = -7;
